5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1637_2446.log
== TEST (2019-04-13 00:51:25) 
-- CODE:
senha = int (input("Digite uma senha de 6 digitos:"))
N1 = senha%10
print (N1)



-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:52:34) 
-- CODE:
senha = int (input("Digite uma senha de 6 digitos:"))
N1 = senha%10
n2 = senha//10
N2 = n2%10
print (N2)



-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:53:25) 
-- CODE:
senha = int (input("Digite uma senha de 6 digitos:"))
N1 = senha%10
n2 = senha//10
N2 = n2%10
n3 = senha//100
N3 = n3%100
print (N3)



-- OUTPUT:
76
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:53:56) 
-- CODE:
senha = int (input("Digite uma senha de 6 digitos:"))
N1 = senha%10
n2 = senha//10
N2 = n2%10
n3 = senha//100
N3 = n3%10
print (N3)



-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:55:18) 
-- CODE:
senha = int (input("Digite uma senha de 6 digitos:"))
N1 = senha%10
n2 = senha//10
N2 = n2%10
n3 = senha//100
N3 = n3%10
n4 = senha//1000
N4 = n4&10
print (N4)



-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:55:39) 
-- CODE:
senha = int (input("Digite uma senha de 6 digitos:"))
N1 = senha%10
n2 = senha//10
N2 = n2%10
n3 = senha//100
N3 = n3%10
n4 = senha//1000
N4 = n4%10
print (N4)



-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 02:05:33) 
-- CODE:
senha = int (input("Digite uma senha de 6 digitos:"))
N1 = senha%10
n2 = senha//10
N2 = n2%10
n3 = senha//100
N3 = n3%10
n4 = senha//1000
N4 = n4%10
n5 = senha//10000
N5 = n5%10
n6 = senha//100000
N6 = n6%10
if ((N2+N4+N6)%(N1+N3+N5)==0):
	print ("acesso liberado")
else:
	print ("senha invalida")



-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 02:05:45) 
-- CODE:
senha = int (input("Digite uma senha de 6 digitos:"))
N1 = senha%10
n2 = senha//10
N2 = n2%10
n3 = senha//100
N3 = n3%10
n4 = senha//1000
N4 = n4%10
n5 = senha//10000
N5 = n5%10
n6 = senha//100000
N6 = n6%10
if ((N2+N4+N6)%(N1+N3+N5)==0):
	print ("acesso liberado")
else:
	print ("senha invalida")



-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 02:06:19) 
-- CODE:
senha = int (input("Digite uma senha de 6 digitos:"))
N1 = senha%10
n2 = senha//10
N2 = n2%10
n3 = senha//100
N3 = n3%10
n4 = senha//1000
N4 = n4%10
n5 = senha//10000
N5 = n5%10
n6 = senha//100000
N6 = n6%10
if ((N2+N4+N6)/(N1+N3+N5)==0):
	print ("acesso liberado")
else:
	print ("senha invalida")



-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 02:06:50) 
-- CODE:
senha = int (input("Digite uma senha de 6 digitos:"))
N1 = senha%10
n2 = senha//10
N2 = n2%10
n3 = senha//100
N3 = n3%10
n4 = senha//1000
N4 = n4%10
n5 = senha//10000
N5 = n5%10
n6 = senha//100000
N6 = n6%10
if ((N2+N4+N6)//(N1+N3+N5)==0):
	print ("acesso liberado")
else:
	print ("senha invalida")



-- EXECUTION TIME:
0.27681
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 02:07:11) 
-- CODE:
senha = int (input("Digite uma senha de 6 digitos:"))
N1 = senha%10
n2 = senha//10
N2 = n2%10
n3 = senha//100
N3 = n3%10
n4 = senha//1000
N4 = n4%10
n5 = senha//10000
N5 = n5%10
n6 = senha//100000
N6 = n6%10
if ((N2+N4+N6)%(N1+N3+N5)==0):
	print ("acesso liberado")
else:
	print ("senha invalida")



-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 02:09:16) 
-- CODE:
senha = int (input("Digite uma senha de 6 digitos:"))
N1 = senha%10
print (N1)
n2 = senha//10
N2 = n2%10
print (N2)
n3 = senha//100
N3 = n3%10
print (N3)
n4 = senha//1000
N4 = n4%10
print (N4)
n5 = senha//10000
N5 = n5%10
print (N5)
n6 = senha//100000
N6 = n6%10
print (N6)
if ((N2+N4+N6)%(N1+N3+N5)==0):
	print ("acesso liberado")
else((N2+N4+N6)%(N1+N3+N5)!=0):
	print ("senha invalida")



-- ERROR:
File "XXXX", line 21
    else((N2+N4+N6)%(N1+N3+N5)!=0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 02:09:28) 
-- CODE:
senha = int (input("Digite uma senha de 6 digitos:"))
N1 = senha%10
print (N1)
n2 = senha//10
N2 = n2%10
print (N2)
n3 = senha//100
N3 = n3%10
print (N3)
n4 = senha//1000
N4 = n4%10
print (N4)
n5 = senha//10000
N5 = n5%10
print (N5)
n6 = senha//100000
N6 = n6%10
print (N6)
if ((N2+N4+N6)%(N1+N3+N5)==0):
	print ("acesso liberado")
else((N2+N4+N6)%(N1+N3+N5)=!0):
	print ("senha invalida")



-- ERROR:
File "XXXX", line 21
    else((N2+N4+N6)%(N1+N3+N5)=!0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 02:09:39) 
-- CODE:
senha = int (input("Digite uma senha de 6 digitos:"))
N1 = senha%10
print (N1)
n2 = senha//10
N2 = n2%10
print (N2)
n3 = senha//100
N3 = n3%10
print (N3)
n4 = senha//1000
N4 = n4%10
print (N4)
n5 = senha//10000
N5 = n5%10
print (N5)
n6 = senha//100000
N6 = n6%10
print (N6)
if ((N2+N4+N6)%(N1+N3+N5)==0):
	print ("acesso liberado")
else:
	print ("senha invalida")



-- OUTPUT:
2
1
6
7
8
0
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 02:12:59) 
-- CODE:
senha = int (input("Digite uma senha de 6 digitos:"))
N1 = senha%10
n2 = senha//10
N2 = n2%10
n3 = senha//100
N3 = n3%10
n4 = senha//1000
N4 = n4%10
n5 = senha//10000
N5 = n5%10
n6 = senha//100000
N6 = n6%10
if ((N1+N3+N5)%(N2+N4+N6)==0):
	print ("acesso liberado")
else:
	print ("senha invalida")



-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 02:13:11) 
-- CODE:
senha = int (input("Digite uma senha de 6 digitos:"))
N1 = senha%10
n2 = senha//10
N2 = n2%10
n3 = senha//100
N3 = n3%10
n4 = senha//1000
N4 = n4%10
n5 = senha//10000
N5 = n5%10
n6 = senha//100000
N6 = n6%10
if ((N1+N3+N5)%(N2+N4+N6)==0):
	print ("acesso liberado")
else:
	print ("senha invalida")



-- EXECUTION TIME:
0.174683
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
